# objsize

./: .gitignore  CODE_OF_CONDUCT.md  LICENSE  MANIFEST.in  Makefile  README.md  objsize.py  pyproject.toml  requirements.txt  setup.py  test.py  test_objsize.py  test_workflow.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: static.yml  test.yaml
docs/: Makefile  conf.py  index.rst
docs/_templates/: custom-module-template.rst
docs/source/: conf.py  index.rst
objsize/: __init__.py  size.py  traverse.py
