# Author: Liran Funaro <liran.funaro@gmail.com>
#
# Copyright (c) 2006-2022, Liran Funaro.
# All rights reserved.
#
# Redistribution and use in source and binary forms, with or without
# modification, are permitted provided that the following conditions are met:
# 1. Redistributions of source code must retain the above copyright
#    notice, this list of conditions and the following disclaimer.
# 2. Redistributions in binary form must reproduce the above copyright
#    notice, this list of conditions and the following disclaimer in the
#    documentation and/or other materials provided with the distribution.
# 3. Neither the name of the copyright holder nor the
#    names of its contributors may be used to endorse or promote products
#    derived from this software without specific prior written permission.
#
# THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS"
# AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE
# IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE
# ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT HOLDER OR CONTRIBUTORS BE
# LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR
# CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF
# SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS
# INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN
# CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE)
# ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
# POSSIBILITY OF SUCH DAMAGE.

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "objsize"
version = "0.5.1"
description = "Traversal over Python's objects subtree and calculate the total size of the subtree in bytes (deep size)."
readme = "README.md"
authors = [{ name = "Liran Funaro", email = "liran.funaro@gmail.com" }]
license = { text = "BSD-3-Clause" }
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
keywords = ["object-size", "recursive", "deep", "traversal", "object", "size", "debug", "deep-object-size"]
dependencies = []
requires-python = ">=3.7"

[project.optional-dependencies]
dev = ["black", "bumpver", "isort", "pip-tools", "pytest", "pytest-cov", "coveralls"]

[project.urls]
Homepage = "https://github.com/liran-funaro/objsize"

[tool.bumpver]
current_version = "0.5.1"
version_pattern = "MAJOR.MINOR.PATCH[-TAG]"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = true
push = false

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    "current_version = \"{version}\"",
    "version = \"{version}\"",
    "Copyright (c) 2006-YYYY, Liran Funaro.",
]
"README.md" = [
    "{version}",
    "Copyright (c) 2006-YYYY, Liran Funaro.",
]
"LICENSE" = [
    "Copyright (c) 2006-YYYY, Liran Funaro.",
]
"*.py" = [
    "Copyright (c) 2006-YYYY, Liran Funaro.",
]
"setup.py" = [
    "{version}",
]
"objsize.py" = [
    "^__version__ = \"{version}\"$",
]
